# epoch

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  package-readiness.yml  pages.yml  release-gate.yml
console/: .env.example  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
console/src/: App.tsx  DocsPage.tsx  main.tsx  profileDefinitions.ts  styles.css  vite-env.d.ts
console/src/api/: client.ts  types.ts
console/src/components/: ProfileCreateCard.tsx
console/src/quickstarts/: Quickstart.java  quickstart.go  quickstart.py
control/cmd/epoch-control/: main.go
control/internal/resources/: http.go  http_test.go  registry.go  registry_test.go
crates/epoch-bus/: Cargo.toml
crates/epoch-bus/src/: lib.rs
crates/epoch-cache/: Cargo.toml
crates/epoch-cache/src/: lib.rs  replicated.rs
crates/epoch-cli/: Cargo.toml
crates/epoch-cli/src/: main.rs
crates/epoch-consensus/: Cargo.toml
crates/epoch-consensus/src/: lib.rs  persistent_tests.rs  stable.rs  tests.rs
crates/epoch-consensus/tests/: multiprocess.rs
crates/epoch-consensus/tests/support/: mod.rs
crates/epoch-core/: Cargo.toml
crates/epoch-core/src/: lib.rs
crates/epoch-engine/: Cargo.toml
crates/epoch-engine/src/: lib.rs
crates/epoch-node/: Cargo.toml
crates/epoch-node/src/: cache_tablet.rs  consensus.rs  lib.rs  main.rs  queue_tablet.rs  stream_tablet.rs  tablet_http.rs
crates/epoch-node/src/cache_tablet/: tests.rs
crates/epoch-node/src/queue_tablet/: tests.rs
crates/epoch-node/tests/: http_api.rs
crates/epoch-queue/: Cargo.toml
crates/epoch-queue/src/: lease.rs  lib.rs
crates/epoch-storage/: Cargo.toml
crates/epoch-storage/src/: lib.rs
crates/epoch-stream/: Cargo.toml
crates/epoch-stream/src/: lib.rs
crates/epoch-tablet/: Cargo.toml
crates/epoch-tablet/src/: cache.rs  common.rs  lib.rs  queue.rs
crates/epoch-tablet/src/cache/: command.rs  digest.rs  lock.rs  model.rs  tests.rs
crates/epoch-tablet/src/queue/: command.rs  digest.rs  model.rs  tests.rs
crates/epoch-tablet/tests/: cache_public_api.rs  public_api.rs  queue_public_api.rs
crates/epoch-testkit/: Cargo.toml
crates/epoch-testkit/src/: clock.rs  fault.rs  lib.rs  scheduler.rs  trace.rs  transport.rs
crates/epoch-testkit/tests/: kernel.rs
deploy/compose/: docker-compose.consensus-probe.yml  docker-compose.yml
deploy/docker/: Dockerfile.node
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CACHE_TABLET.md  CONSENSUS_PROBE.md  CONSENSUS_SPIKE.md  DELIVERY_PLAN.md  DEVELOPMENT.md  ENGINEERING_STANDARDS.md  PACKAGE_PUBLICATION.md  PRD.md  QUEUE_TABLET.md  RELEASE_READINESS.md  REQUIREMENTS_TRACEABILITY.md  SECURITY.md  SEMANTICS.md  STREAM_TABLET.md  TESTING.md
docs/adr/: 0001-workload-profiles-and-tablets.md  0002-rust-go-boundary.md  0003-consensus-adapter.md  0004-storage-format-versioning.md  0005-time-and-fencing.md  0006-delivery-sequence.md  0007-repository-and-toolchains.md  0008-segmented-standalone-wal.md
release/: package-readiness.json
scripts/: install-protoc.sh
scripts/release/: check-go.sh  check-java.sh  check-package-policy.py  check-python.sh  check-rust.sh  check-typescript.sh
sdk/go/: README.md
sdk/go/epoch/: client.go  client_test.go  doc.go  errors.go  models.go  standalone_test.go  transport.go  transport_test.go
sdk/java/: README.md  pom.xml
sdk/java/config/: checkstyle.xml
sdk/java/src/main/java/io/epoch/sdk/: BusReplayOptions.java  CacheConfig.java  CacheWriteOptions.java  DurabilityProfile.java  EpochApiException.java  EpochClient.java  EventEnvelope.java  EventFilter.java  EventTransform.java  HttpTransport.java  QueueConfig.java  QueueReceiveOptions.java  StreamConfig.java  Subscription.java  SubscriptionTarget.java  Transport.java
sdk/java/src/test/java/io/epoch/sdk/: EpochClientTest.java  HttpTransportTest.java  StandaloneSmokeTest.java
sdk/python/: README.md  pyproject.toml
sdk/python/src/epoch_sdk/: __init__.py  client.py  errors.py  models.py  transport.py
sdk/python/tests/: test_client.py
spec/formats/: README.md  consensus-stable-store-v1.md  engine-journal-v1-create-queue-checksummed.json  engine-journal-v1-create-queue.json  engine-journal-v1-create-stream.json
spec/proto/epoch/v1/: common.proto  regional_admin.proto
tests/integration/: cache-tablet.sh  consensus-probe.sh  docs-quickstarts.sh  queue-tablet.sh  smoke.sh  stream-tablet.sh
tests/release/: test_package_policy.py  test_package_scripts.py
tests/release/artifacts/java-consumer/: pom.xml
tests/release/artifacts/java-consumer/src/main/java/io/epoch/releaseprobe/: ArtifactConsumer.java
tests/release/fixtures/: cargo-metadata-private.json  go.mod.provisional  go.mod.wrong  pnpm-workspace.yaml  typescript-package.json
tools/release/: python-build-requirements.txt
