[workspace]
members = [
  "crates/epoch-core",
  "crates/epoch-storage",
  "crates/epoch-cache",
  "crates/epoch-stream",
  "crates/epoch-queue",
  "crates/epoch-bus",
  "crates/epoch-engine",
  "crates/epoch-node",
  "crates/epoch-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.97"
authors = ["Epoch Contributors"]

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.5"
http = "1.3"
http-body-util = "0.1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "request-id", "trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.18", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
