[package]
name = "epoch-bus"
description = "Filtered fan-out Event Bus profile engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
epoch-core = { path = "../epoch-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

