[package]
name = "epoch-cache"
description = "Memory-first Cache and State profile engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
epoch-core = { path = "../epoch-core" }
serde.workspace = true

[lints]
workspace = true

