[package]
name = "epoch-engine"
description = "Standalone facade composing Epoch workload profile engines"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
epoch-bus = { path = "../epoch-bus" }
epoch-cache = { path = "../epoch-cache" }
epoch-core = { path = "../epoch-core" }
epoch-queue = { path = "../epoch-queue" }
epoch-storage = { path = "../epoch-storage" }
epoch-stream = { path = "../epoch-stream" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
