[package]
name = "epoch-node"
description = "Standalone Epoch data-node executable and native HTTP API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
epoch-bus = { path = "../epoch-bus" }
epoch-cache = { path = "../epoch-cache" }
epoch-core = { path = "../epoch-core" }
epoch-engine = { path = "../epoch-engine" }
epoch-queue = { path = "../epoch-queue" }
epoch-stream = { path = "../epoch-stream" }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true

[lints]
workspace = true
