[package]
name = "epoch-node"
description = "Standalone Epoch data-node executable and native HTTP API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
epoch-bus = { path = "../epoch-bus" }
epoch-cache = { path = "../epoch-cache" }
epoch-core = { path = "../epoch-core" }
epoch-consensus = { path = "../epoch-consensus" }
epoch-engine = { path = "../epoch-engine" }
epoch-queue = { path = "../epoch-queue" }
epoch-storage = { path = "../epoch-storage" }
epoch-stream = { path = "../epoch-stream" }
epoch-tablet = { path = "../epoch-tablet" }
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
