[package]
name = "epoch-queue"
description = "Reliable Work Queue profile state machine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
crc32fast.workspace = true
epoch-core = { path = "../epoch-core" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
