[package]
name = "epoch-tablet"
description = "Typed replicated tablet state machines for Epoch workload profiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
epoch-core = { path = "../epoch-core" }
epoch-stream = { path = "../epoch-stream" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
