[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "epoch-sdk"
version = "0.1.0a1"
description = "Official Python client for Epoch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "License not yet selected; do not publish" }
authors = [{ name = "Epoch Contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epoch_sdk = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
